google setup for android and web

--- a/web/index.html
+++ b/web/index.html
@@ -38,6 +38,7 @@
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
+  <meta name="google-signin-client_id" content="590716354700-ipacofs29sntatvrdduljr7bgbiukk8g.apps.googleusercontent.com">
 </head>
 <body>
   <script>
